--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@qognicafinance/react-lightweight-charts": "^1.0.5",
     "@react-stately/data": "^3.11.2",
     "axios": "^1.6.8",
     "framer-motion": "^11.0.3",
+    "lightweight-charts": "^4.1.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
